; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/linux-capture/extr_xshm-input.c_xshm_update.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/linux-capture/extr_xshm-input.c_xshm_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i8*, i8*, i32 }

@data = common dso_local global %struct.TYPE_4__* null, align 8
@.str = private unnamed_addr constant [7 x i8] c"screen\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"show_cursor\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"advanced\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"server\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @xshm_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xshm_update(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i32 @XSHM_DATA(i8* %5)
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** @data, align 8
  %8 = call i32 @xshm_capture_stop(%struct.TYPE_4__* %7)
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @obs_data_get_int(i32* %9, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** @data, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 3
  store i32 %10, i32* %12, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i8* @obs_data_get_bool(i32* %13, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0))
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** @data, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 2
  store i8* %14, i8** %16, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = call i8* @obs_data_get_bool(i32* %17, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0))
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** @data, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 1
  store i8* %18, i8** %20, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @obs_data_get_string(i32* %21, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  %23 = call i32 @bstrdup(i32 %22)
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** @data, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 8
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** @data, align 8
  %27 = call i32 @xshm_capture_start(%struct.TYPE_4__* %26)
  ret void
}

declare dso_local i32 @XSHM_DATA(i8*) #1

declare dso_local i32 @xshm_capture_stop(%struct.TYPE_4__*) #1

declare dso_local i32 @obs_data_get_int(i32*, i8*) #1

declare dso_local i8* @obs_data_get_bool(i32*, i8*) #1

declare dso_local i32 @bstrdup(i32) #1

declare dso_local i32 @obs_data_get_string(i32*, i8*) #1

declare dso_local i32 @xshm_capture_start(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
